fix(java8): javac --release 8 审计暴露的 Java 9-17 API 残留清零
全量审计（1060 文件 × 1.20.1 完整 compileClasspath 126 jar）发现并修复：
- String.formatted（Java 15）28 处 → String.format（字面量与常量两种形态）
- HexFormat（Java 17）4 处 → 新增 YsmStrings.formatHex（小写无分隔，逐字节
  移位实现，无分配除结果串外）
- Pattern.asMatchPredicate（Java 11）7 处 → s -> pattern.matcher(s).matches()
  （asMatchPredicate 全匹配语义保留；asPredicate 是 find 语义不可用）
- Optional.or（Java 9）1 处 → 显式 isPresent 回退；Optional.isEmpty（Java 11）
  3 处 → !isPresent()
- ByteBuffer.slice(int,int)（Java 13）2 处 → duplicate+position+limit+slice()
  （同内容同窗口，position=0/capacity=len 语义一致）
- ByteBuffer.limit(int) 协变返回依赖 2 处 → 拆语句（Java 8 中 limit 返回 Buffer）
- VarHandle/MethodHandles.privateLookupIn（Java 9）→ java.lang.reflect.Field
  反射改写（VarHandleHelper + BetterCombatBinding，compat 专用路径）
- @Serial（Java 14）→ 删注解（纯编译期标记，零运行时行为）

审计剩余 65 错均为审计器假阳性：
a) rip/ysm/zstd ×60 + util/UnsafeUtil ×4 = sun.misc.Unsafe——--release 8 的
   ct.sym 不含 sun.misc，但真实 JDK 8 存在该类（上游 YSM Java 8 血统的既定
   依赖），-source 8 -target 8 对照编译零错误；
b) ConditionSwing ×1 = 1.20.1 依赖类签名引用 java.lang.Record，属 1.16.5
   换依赖后自然消解的跨版本符号问题，非本仓源码问题。
1.20.1 build 绿。
Task: m2-java8-downshift

Signed-off-by: brokestar233 <3765589194@qq.com>