@@ -154,13 +154,13 @@ public class ModelSettingsScreen extends OptionScreen {
 
     private String groupLabel(ExtraAnimationButtons group) {
         String fallback = group.getName() == null || group.getName().isEmpty() ? group.getId() : group.getName();
-        return ModelMetadataPresenter.getLocalizedModelString(modelAssembly, "properties.extra_animation_buttons.%s.name".formatted(group.getId()), fallback);
+        return ModelMetadataPresenter.getLocalizedModelString(modelAssembly, String.format("properties.extra_animation_buttons.%s.name", group.getId()), fallback);
     }
 
     @Nullable
     private OptionRow<?> buildRow(String groupId, int formIndex, AbstractConfig form) {
-        String title = ModelMetadataPresenter.getLocalizedModelString(modelAssembly, "properties.extra_animation_buttons.%s.config_forms.%d.title".formatted(groupId, formIndex), form.getTitle());
-        String desc = ModelMetadataPresenter.getLocalizedModelString(modelAssembly, "properties.extra_animation_buttons.%s.config_forms.%d.description".formatted(groupId, formIndex), form.getDescription());
+        String title = ModelMetadataPresenter.getLocalizedModelString(modelAssembly, String.format("properties.extra_animation_buttons.%s.config_forms.%d.title", groupId, formIndex), form.getTitle());
+        String desc = ModelMetadataPresenter.getLocalizedModelString(modelAssembly, String.format("properties.extra_animation_buttons.%s.config_forms.%d.description", groupId, formIndex), form.getDescription());
         if (form instanceof CheckboxConfig) {
             CheckboxConfig cfg = (CheckboxConfig) form;
             return new BooleanOptionRow(0, 0, 0, 22, MolangOption.ofBoolean(title, desc, animatable, cfg.getValue()));
@@ -175,7 +175,7 @@ public class ModelSettingsScreen extends OptionScreen {
             List<String> texts = new ArrayList<>(labels.size());
             String[] writeExprs = new String[labels.size()];
             for (int i = 0; i < labels.size(); i++) {
-                texts.add(ModelMetadataPresenter.getLocalizedModelString(modelAssembly, "properties.extra_animation_buttons.%s.config_forms.%d.labels.%d".formatted(groupId, formIndex, i), labels.getKeyAt(i)));
+                texts.add(ModelMetadataPresenter.getLocalizedModelString(modelAssembly, String.format("properties.extra_animation_buttons.%s.config_forms.%d.labels.%d", groupId, formIndex, i), labels.getKeyAt(i)));
                 writeExprs[i] = labels.getValueAt(i);
             }
             return new RadioOptionRow(0, 0, 0, 22, MolangOption.ofIndex(title, desc, animatable, cfg.getValue(), writeExprs), texts);
